Add missing slash from URL in example config file

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -9,7 +9,7 @@
 # used instead.
 
 # The URL of the saltant API. For example, https://shahlabjobs.ca/api/.
-saltant-api-url: "https:/shahlabjobs.ca/api/"
+saltant-api-url: "https://shahlabjobs.ca/api/"
 
 # The registered saltant user's authentication token.
 saltant-auth-token: "p0gch4mp101fy451do9uod1s1x9i4a"
