--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2018.8.24
 chardet==3.0.4
 Click==7.0
 click-completion==0.4.1
+click-spinner==0.1.8
 colorama==0.3.9
 idna==2.7
 Jinja2==2.10
