--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ idna==2.7
 Jinja2==2.10
 MarkupSafe==1.0
 python-dateutil==2.7.3
-PyYAML==4.2b4
+PyYAML==5.1
 requests==2.21.0
 saltant-py==0.4.0
 shellingham==1.2.6
